since version 2.2.0:

* Experimental 32-bit and 64-bit Windows Installer (.msi) packages are available.
  It is recommended that you use these independently of the NSIS (.exe) installers.
  That is, you should make sure the NSIS package is completely uninstalled before
  installing the Windows Installer package and vice-versa.
* Source packages are now compressed using xz instead of bzip2.

//=== Removed Dissectors

//=== New File Format Decoding Support

=== New Protocol Support

// Add one protocol per line between the --sort-and-group-- delimiters.
--sort-and-group--
Nordic BLE Sniffer
Ericsson A-bis TFP (Traffic Forwarding Protocol)
Ericsson A-bis P-GSL
vSocket
ISO 15765
Unified Diagnostic Services (UDS)
SCTE-35 Digital Program Insertion Messages
Windows Cluster Management API (clusapi)
RFTap Protocol
M2 Application Protocol
CAN FD
Bluetooth HCI Vendor Intel
High-speed SECS message service (HSMS)
GSM Osmux
Health Level 7 (HL7)
Local Service Discovery (LSD)
Fc00/cjdns Protocol
--sort-and-group--

=== Updated Protocol Support

Too many protocols have been updated to list here.

=== New and Updated Capture File Support

_Non-empty section placeholder._
// Add one file type per line between the --sort-and-group-- delimiters.
--sort-and-group--
--sort-and-group--

=== New and Updated Capture Interfaces support

_Non-empty section placeholder._
--sort-and-group--
--sort-and-group--

//=== Major API Changes

== Getting Wireshark

Wireshark source code and installation packages are available from
https://www.wireshark.org/download.html.

=== Vendor-supplied Packages

Most Linux and Unix vendors supply their own Wireshark packages. You can
usually install or upgrade Wireshark using the package management system
specific to that platform. A list of third-party packages can be found
on the https://www.wireshark.org/download.html#thirdparty[download page]
on the Wireshark web site.

== File Locations

Wireshark and TShark look in several different locations for preference