@@ -10,6 +10,8 @@ compiler:
 env:
  - BUILD_CMAKE=no
  - BUILD_CMAKE=yes
+ - CMAKE_GTK_OPTS="-DBUILD_wireshark_gtk=ON"
+ - AUTOTOOLS_GTK_OPTS="--with-gtk=3"
 
 matrix:
   exclude:
@@ -35,6 +37,6 @@ before_install:
 #  - sudo apt-get -qq install qt5-default qttools5-dev qttools5-dev-tools
   - $CC --version
 before_script:
-  if [ ${BUILD_CMAKE} == "yes" ]; then mkdir build && cd build && cmake ..; else ./autogen.sh && ./configure ; fi
+  if [ ${BUILD_CMAKE} == "yes" ]; then mkdir build && cd build && cmake ${CMAKE_GTK_OPTS} ..; else ./autogen.sh && ./configure ${AUTOTOOLS_GTK_OPTS} ; fi
 script:
   - make
