@@ -28,6 +28,7 @@ export docdir = /usr/share/doc/wireshark-doc
 
 override_dh_auto_configure:
 	dh_auto_configure -- -DENABLE_HTML_GUIDES=ON -DCMAKE_INSTALL_LIBDIR=/usr/lib/$(DEB_HOST_MULTIARCH) \
+	-DBUILD_wireshark_gtk=ON \
 #	-DENABLE_QT5=OFF
 
 override_dh_auto_build:
